--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "magento-developer-tools",
-  "displayName": "magento-developer-tools",
+  "displayName": "Magento Developer Tools",
   "description": "A set of developer tools for Magento integrated with VSCode.",
   "version": "0.0.1",
   "authors": [
@@ -15,16 +15,32 @@
     "url": "https://github.com/OpenForgeProject/vscode-ext-magento-developer-tools"
   },
   "engines": {
-    "vscode": "^1.95.0"
+    "vscode": "^1.96.0"
   },
   "categories": [
-    "Other"
+    "Other",
+  ],
+  "keywords": [
+    "Magento",
+    "Developer",
+    "Tools",
+    "VSCode",
+    "Development",
+    "Productivity",
+    "OpenForge",
+    "OpenForgeProject"
+    "OpenForge Project"
+    "Open Forge"
+    "Open Forge Project"
   ],
   "activationEvents": [],
-  "main": "./dist/extension.js",
   "contributes": {
     "commands": []
   },
+  "activationEvents": [
+    "onStartupFinished"
+  ],
+  "main": "./dist/extension.js",
   "scripts": {
     "vscode:prepublish": "npm run package",
     "compile": "webpack",
